<resources>
    <string name="app_name">Interview App</string>
    <string name="navigation_home">Home</string>
    <string name="default_portfolio">My Portfolio</string>

    <string name="error_network">There was a network error.</string>
    <string name="error_runtime">The application encountered an error.</string>
    <string name="error_api">There was an error with the server response.</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>

    <string name="developer_options">DevOpts</string>
    <string name="dev_opt_normal">Normal</string>
    <string name="dev_opt_empty">Empty</string>
    <string name="dev_opt_malformed">Malformed</string>
    <string name="dev_opt_runtime_error">Runtime Error</string>

    <string name="edit">Edit</string>
    <string name="new_">New</string>
    <string name="my_todos">My TODO</string>
    <string name="completed">Completed</string>
    <string name="show_completed">Show Completed</string>
    <string name="save">Save</string>

    <plurals name="num_shares">
        <item quantity="one">%d Share</item>
        <item quantity="other">%d Shares</item>
    </plurals>
</resources>
