<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    app:cardElevation="16dp">
    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_margin="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/devnormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_opt_normal"
            />
        <RadioButton
            android:id="@+id/devempty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_opt_empty"
            />
        <RadioButton
            android:id="@+id/devmalformed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_opt_malformed"
            />
        <RadioButton
            android:id="@+id/devruntimeerror"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_opt_runtime_error"
            />
    </RadioGroup>
</merge>