<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:maxLines="2"
                android:scrollbars="vertical" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_container" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkbox_complete" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_error"
            android:textSize="6pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_save" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>